# Mashiron-Fly

./: Cargo.toml  Dockerfile  README.md  config.yaml  hello.js
.github/workflows/: docker.yml
src/: config.rs  data.rs  js.rs  main.rs  runner.rs  utils.rs
src/cmds/: add.rs  delete.rs  help.rs  list.rs  mod.rs  ping.rs
