[package]
name = "mashiron-fly"
version = "0.1.0"
description = "Modern auto-reply bot written with rust"
edition = "2021"
homepage = "https://github.com/tpc3/Mashiron-Fly"
build="src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
serde = "1.0.132"
serde_derive = "1.0.132"
tokio = { version = "1.15.0", features = ["full"] }
once_cell = "1.9.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
chrono= "0.4.19"
serde_json = "1.0.73"
fancy-regex = "0.7.1"
serenity = "0.10.9"
yaml-rust = "0.4"
blake3 = "1.3.1"
rand = "0.8.5"
quick-js = "0.4.1"
cached = "0.34.0"

[build-dependencies]
built = "0.5.1"
